--- a/copyxnat.xnat.commands.html
+++ b/copyxnat.xnat.commands.html
@@ -17,7 +17,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="copyxnat.xnat.copy_cache module" href="copyxnat.xnat.copy_cache.html" />
-    <link rel="prev" title="copyxnat.xnat.app_settings module" href="copyxnat.xnat.app_settings.html" /> 
+    <link rel="prev" title="copyxnat.xnat package" href="copyxnat.xnat.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -32,7 +32,7 @@
           <a href="copyxnat.xnat.copy_cache.html" title="copyxnat.xnat.copy_cache module"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat.app_settings.html" title="copyxnat.xnat.app_settings module"
+          <a href="copyxnat.xnat.html" title="copyxnat.xnat package"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
@@ -98,8 +98,8 @@
               <img class="logo" src="_static/project-icon.png" alt="Logo"/>
             </a></p>
   <h4>Previous topic</h4>
-  <p class="topless"><a href="copyxnat.xnat.app_settings.html"
-                        title="previous chapter">copyxnat.xnat.app_settings module</a></p>
+  <p class="topless"><a href="copyxnat.xnat.html"
+                        title="previous chapter">copyxnat.xnat package</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="copyxnat.xnat.copy_cache.html"
                         title="next chapter">copyxnat.xnat.copy_cache module</a></p>
@@ -137,7 +137,7 @@
           <a href="copyxnat.xnat.copy_cache.html" title="copyxnat.xnat.copy_cache module"
              >next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat.app_settings.html" title="copyxnat.xnat.app_settings module"
+          <a href="copyxnat.xnat.html" title="copyxnat.xnat package"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
