--- a/_modules/copyxnat/utils/rsync.html
+++ b/_modules/copyxnat/utils/rsync.html
@@ -113,10 +113,10 @@
         <span class="k">try</span><span class="p">:</span>
             <span class="n">subprocess</span><span class="o">.</span><span class="n">check_output</span><span class="p">(</span><span class="n">command_to_run</span><span class="p">)</span>
         <span class="k">except</span> <span class="n">subprocess</span><span class="o">.</span><span class="n">CalledProcessError</span> <span class="k">as</span> <span class="n">exc</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="s1">&#39;An error occurred running the rsync command </span><span class="si">{}</span><span class="s1">&#39;</span>
-                                <span class="s1">&#39;. The error was :</span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">string_command</span><span class="p">,</span>
-                                                             <span class="nb">str</span><span class="p">(</span><span class="n">exc</span><span class="p">)),</span>
-                                <span class="n">excption_type</span><span class="o">=</span><span class="n">ProjectFailure</span><span class="p">)</span></div>
+            <span class="n">error_message</span> <span class="o">=</span> <span class="s1">&#39;An error occurred running the rsync command </span><span class="si">{}</span><span class="s1">.&#39;</span> \
+                            <span class="s1">&#39;The error was :</span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">string_command</span><span class="p">,</span> <span class="nb">str</span><span class="p">(</span><span class="n">exc</span><span class="p">))</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="n">error_message</span><span class="p">)</span>
+            <span class="k">raise</span> <span class="n">ProjectFailure</span><span class="p">(</span><span class="n">error_message</span><span class="p">)</span> <span class="kn">from</span> <span class="nn">exc</span></div>
 </pre></div>
 
             <div class="clearer"></div>
