--- a/_modules/copyxnat/xnat_backend/pyxnat_server.html
+++ b/_modules/copyxnat/xnat_backend/pyxnat_server.html
@@ -115,7 +115,7 @@
             <span class="k">if</span> <span class="n">warn_on_fail</span><span class="p">:</span>
                 <span class="n">reporter</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="n">message</span><span class="p">)</span>
             <span class="k">else</span><span class="p">:</span>
-                <span class="n">reporter</span><span class="o">.</span><span class="n">verbose_log</span><span class="p">(</span><span class="n">message</span><span class="p">)</span>
+                <span class="n">reporter</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="n">message</span><span class="p">)</span>
             <span class="k">return</span> <span class="kc">False</span></div></div>
 
 
@@ -234,7 +234,7 @@
                 <span class="n">overwrite</span><span class="o">=</span><span class="n">overwrite</span>
             <span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="n">reporter</span><span class="o">.</span><span class="n">verbose_log</span><span class="p">(</span><span class="s2">&quot;Resource is empty or zip download is &quot;</span>
+            <span class="n">reporter</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Resource is empty or zip download is &quot;</span>
                                  <span class="s2">&quot;disabled&quot;</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="PyXnatResourceBase.download_zip_file"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.download_zip_file">[docs]</a>    <span class="k">def</span> <span class="nf">download_zip_file</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">save_dir</span><span class="p">):</span>
