--- a/_modules/index.html
+++ b/_modules/index.html
@@ -45,13 +45,18 @@
 <li><a href="copyxnat/commands/ohif_command.html">copyxnat.commands.ohif_command</a></li>
 <li><a href="copyxnat/commands/rebuild_catalog_command.html">copyxnat.commands.rebuild_catalog_command</a></li>
 <li><a href="copyxnat/commands/show_command.html">copyxnat.commands.show_command</a></li>
+<li><a href="copyxnat/config/app_settings.html">copyxnat.config.app_settings</a></li>
+<li><a href="copyxnat/config/server_params.html">copyxnat.config.server_params</a></li>
+<li><a href="copyxnat/pyreporter/console.html">copyxnat.pyreporter.console</a></li>
+<li><a href="copyxnat/pyreporter/console_logger.html">copyxnat.pyreporter.console_logger</a></li>
+<li><a href="copyxnat/pyreporter/file_logger.html">copyxnat.pyreporter.file_logger</a></li>
+<li><a href="copyxnat/pyreporter/progress.html">copyxnat.pyreporter.progress</a></li>
 <li><a href="copyxnat/pyreporter/pyreporter.html">copyxnat.pyreporter.pyreporter</a></li>
 <li><a href="copyxnat/ui/copyxnat_command_line.html">copyxnat.ui.copyxnat_command_line</a></li>
 <li><a href="copyxnat/utils/network_utils.html">copyxnat.utils.network_utils</a></li>
 <li><a href="copyxnat/utils/rsync.html">copyxnat.utils.rsync</a></li>
 <li><a href="copyxnat/utils/versioneer_version.html">copyxnat.utils.versioneer_version</a></li>
 <li><a href="copyxnat/utils/versioning.html">copyxnat.utils.versioning</a></li>
-<li><a href="copyxnat/xnat/app_settings.html">copyxnat.xnat.app_settings</a></li>
 <li><a href="copyxnat/xnat/commands.html">copyxnat.xnat.commands</a></li>
 <li><a href="copyxnat/xnat/copy_cache.html">copyxnat.xnat.copy_cache</a></li>
 <li><a href="copyxnat/xnat/xml_cleaner.html">copyxnat.xnat.xml_cleaner</a></li>
