--- a/_modules/copyxnat/ui/copyxnat_command_line.html
+++ b/_modules/copyxnat/ui/copyxnat_command_line.html
@@ -221,13 +221,13 @@
         <span class="n">overwrite_existing</span><span class="o">=</span><span class="n">overwrite_existing</span><span class="p">,</span>
         <span class="n">transfer_mode</span><span class="o">=</span><span class="n">transfer_mode</span><span class="p">,</span>
         <span class="n">data_dir</span><span class="o">=</span><span class="n">args</span><span class="o">.</span><span class="n">cache_dir</span><span class="p">,</span>
+        <span class="n">verbose</span><span class="o">=</span><span class="n">verbose</span>
     <span class="p">)</span>
 
     <span class="n">result</span> <span class="o">=</span> <span class="n">run_command</span><span class="p">(</span><span class="n">command</span><span class="o">=</span><span class="n">command</span><span class="p">,</span>
                          <span class="n">src_params</span><span class="o">=</span><span class="n">src_params</span><span class="p">,</span>
                          <span class="n">dst_params</span><span class="o">=</span><span class="n">dst_params</span><span class="p">,</span>
                          <span class="n">project_filter</span><span class="o">=</span><span class="n">project_list</span><span class="p">,</span>
-                         <span class="n">verbose</span><span class="o">=</span><span class="n">verbose</span><span class="p">,</span>
                          <span class="n">app_settings</span><span class="o">=</span><span class="n">app_settings</span>
                          <span class="p">)</span>
 
