--- a/_modules/copyxnat/pyreporter/file_logger.html
+++ b/_modules/copyxnat/pyreporter/file_logger.html
@@ -43,7 +43,7 @@
 <span class="sd">&quot;&quot;&quot;Class for logging to a file&quot;&quot;&quot;</span>
 
 <span class="kn">import</span> <span class="nn">logging</span>
-<span class="kn">from</span> <span class="nn">logging.handlers</span> <span class="kn">import</span> <span class="n">RotatingFileHandler</span>
+<span class="kn">from</span> <span class="nn">datetime</span> <span class="kn">import</span> <span class="n">datetime</span>
 <span class="kn">from</span> <span class="nn">os</span> <span class="kn">import</span> <span class="n">makedirs</span>
 <span class="kn">from</span> <span class="nn">os.path</span> <span class="kn">import</span> <span class="n">join</span><span class="p">,</span> <span class="n">exists</span><span class="p">,</span> <span class="n">isfile</span>
 
@@ -84,20 +84,27 @@
         <span class="n">log_dir</span> <span class="o">=</span> <span class="n">join</span><span class="p">(</span><span class="n">data_dir</span><span class="p">,</span> <span class="s1">&#39;logs&#39;</span><span class="p">)</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="n">exists</span><span class="p">(</span><span class="n">log_dir</span><span class="p">):</span>
             <span class="n">makedirs</span><span class="p">(</span><span class="n">log_dir</span><span class="p">)</span>
-        <span class="n">log_file</span> <span class="o">=</span> <span class="n">join</span><span class="p">(</span><span class="n">log_dir</span><span class="p">,</span> <span class="s1">&#39;copyxnat.log&#39;</span><span class="p">)</span>
-        <span class="n">log_file_exists</span> <span class="o">=</span> <span class="n">isfile</span><span class="p">(</span><span class="n">log_file</span><span class="p">)</span>
+
+        <span class="n">log_file</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_get_unique_filename</span><span class="p">(</span><span class="n">log_dir</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">_logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">name</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_logger</span><span class="o">.</span><span class="n">setLevel</span><span class="p">(</span><span class="n">logging</span><span class="o">.</span><span class="n">DEBUG</span> <span class="k">if</span> <span class="n">verbose</span> <span class="k">else</span> <span class="n">logging</span><span class="o">.</span><span class="n">INFO</span><span class="p">)</span>
 
-        <span class="n">handler</span> <span class="o">=</span> <span class="n">RotatingFileHandler</span><span class="p">(</span><span class="n">log_file</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s1">&#39;a&#39;</span><span class="p">,</span> <span class="n">backupCount</span><span class="o">=</span><span class="mi">20</span><span class="p">,</span>
-                                      <span class="n">delay</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+        <span class="n">handler</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">FileHandler</span><span class="p">(</span><span class="n">log_file</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s1">&#39;a&#39;</span><span class="p">)</span>
         <span class="n">handler</span><span class="o">.</span><span class="n">setFormatter</span><span class="p">(</span>
             <span class="n">logging</span><span class="o">.</span><span class="n">Formatter</span><span class="p">(</span><span class="s1">&#39;</span><span class="si">%(asctime)s</span><span class="s1"> [</span><span class="si">%(levelname)s</span><span class="s1">] </span><span class="si">%(message)s</span><span class="s1">&#39;</span><span class="p">))</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_logger</span><span class="o">.</span><span class="n">addHandler</span><span class="p">(</span><span class="n">handler</span><span class="p">)</span>
 
-        <span class="k">if</span> <span class="n">log_file_exists</span><span class="p">:</span>
-            <span class="n">handler</span><span class="o">.</span><span class="n">doRollover</span><span class="p">()</span></div>
+    <span class="nd">@staticmethod</span>
+    <span class="k">def</span> <span class="nf">_get_unique_filename</span><span class="p">(</span><span class="n">log_dir</span><span class="p">):</span>
+        <span class="n">now_string</span> <span class="o">=</span> <span class="n">datetime</span><span class="o">.</span><span class="n">now</span><span class="p">()</span><span class="o">.</span><span class="n">strftime</span><span class="p">(</span><span class="s1">&#39;</span><span class="si">%d</span><span class="s1">_%m_%Y_%H_%M_%S_&#39;</span><span class="p">)</span>
+        <span class="n">log_file</span> <span class="o">=</span> <span class="n">join</span><span class="p">(</span><span class="n">log_dir</span><span class="p">,</span> <span class="s1">&#39;copyxnat_</span><span class="si">{}</span><span class="s1">.log&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">now_string</span><span class="p">))</span>
+        <span class="n">suffix_index</span> <span class="o">=</span> <span class="mi">0</span>
+        <span class="k">while</span> <span class="n">isfile</span><span class="p">(</span><span class="n">log_file</span><span class="p">):</span>
+            <span class="n">suffix_index</span> <span class="o">+=</span> <span class="mi">1</span>
+            <span class="n">log_file</span> <span class="o">=</span> <span class="n">join</span><span class="p">(</span><span class="n">log_dir</span><span class="p">,</span> <span class="s1">&#39;copyxnat_</span><span class="si">{}</span><span class="s1">_</span><span class="si">{}</span><span class="s1">.log&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">now_string</span><span class="p">,</span>
+                                                                <span class="n">suffix_index</span><span class="p">))</span>
+        <span class="k">return</span> <span class="n">log_file</span></div>
 </pre></div>
 
             <div class="clearer"></div>
